--- a/style.css
+++ b/style.css
@@ -71,6 +71,24 @@ audio::-webkit-media-controls-panel {
 }
 
 
+/* 🖥️ Pour les écrans moyens (tablettes, iPads) */
+@media screen and (min-width: 768px) {
+    .audio-container {
+        width: 45vw; /* 25% de la largeur de l'écran */
+        height: 35vh; /* 35% de la hauteur de l'écran */
+
+    }
+}
+
+/* 🖥️ Pour les grands écrans (PC) */
+@media screen and (min-width: 1024px) {
+    .audio-container {
+        width: 90vw; /* Un peu plus grand sur PC */
+        height: 40vh; /* Plus haut aussi */
+    }
+}
+
+
 .audio-player{
     width: 35rem;
     display: flex;
@@ -104,7 +122,7 @@ audio::-webkit-media-controls-panel {
 #progress::-webkit-slider-thumb{
     -webkit-appearance: none;
     appearance: none;
-    width: 10px;
+    width: 12px;
     height: 12px;
     background: #fff; /* Bouton blanc */
     border-radius: 80%;
