--- a/style.css
+++ b/style.css
@@ -27,6 +27,24 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+
+   
+}
+
+#background{
+    position: fixed; /* Fixe l'image en arrière-plan */
+    top: 0;
+    left: 50%;
+    transform: translateX(-50%); /* Centre l'image en largeur */
+    
+    width: auto;
+    height: 67vh; /* Même taille qu'avant */
+    
+    object-fit: contain; /* Évite la déformation */
+    z-index: -1; /* Place l'image derrière tout */
+    mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1) 75%, rgba(0, 0, 0, 0) 100%);
+    -webkit-mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1) 75%, rgba(0, 0, 0, 0) 100%);
+    
 }
 
 /* Style du titre */
@@ -38,7 +56,7 @@ h1 {
 }
 
 h3 {
-    font-size: 1.5rem;
+    font-size: 1.7rem;
     font-weight: lighter;
     color: #BABABA;
 }
@@ -60,7 +78,7 @@ audio::-webkit-media-controls-panel {
     max-width: 40rem; 
     min-width: 20rem; 
     height: auto; 
-    padding: 1rem;
+    padding: 1rem 1rem 3rem 1rem;
     height: 30rem;
     display: flex;
     align-items: center;
@@ -68,6 +86,7 @@ audio::-webkit-media-controls-panel {
     flex-wrap: wrap;
     position: fixed;
     bottom: 0;
+    gap: 5.9rem;
 }
 
 
