--- a/style.css
+++ b/style.css
@@ -41,7 +41,7 @@ body {
     height: 67vh; /* Même taille qu'avant */
     
     object-fit: contain; /* Évite la déformation */
-    z-index: -1; /* Place l'image derrière tout */
+    z-index: -2; /* Place l'image derrière tout */
     mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1) 75%, rgba(0, 0, 0, 0) 100%);
     -webkit-mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1) 75%, rgba(0, 0, 0, 0) 100%);
     
@@ -53,10 +53,9 @@ body {
     left: 50%;       /* Centré horizontalement */
     transform: translateX(-50%); /* Centre parfaitement */
 
-    width: 50rem;    /* Ajuste à ta convenance */
-    height: auto;
+    object-fit: contain;
 
-    z-index: 0;      /* Superposé à l’image de fond (#background), mais derrière le contenu */
+    z-index: -1;      /* Superposé à l’image de fond (#background), mais derrière le contenu */
     pointer-events: none; /* Important : laisse les clics passer au travers */
 }
 
@@ -90,9 +89,8 @@ audio::-webkit-media-controls-panel {
     width: 95vw; 
     max-width: 40rem; 
     min-width: 20rem; 
-    height: auto; 
     padding: 1rem 1rem 3rem 1rem;
-    height: 30rem;
+    height: 35vh;
     display: flex;
     align-items: center;
     justify-content: center;
