--- a/style.css
+++ b/style.css
@@ -38,7 +38,7 @@ body {
     transform: translateX(-50%); /* Centre l'image en largeur */
     
     width: auto;
-    height: 67vh; /* Même taille qu'avant */
+    height: 66vh; /* Même taille qu'avant */
     
     object-fit: contain; /* Évite la déformation */
     z-index: -2; /* Place l'image derrière tout */
@@ -89,7 +89,6 @@ audio::-webkit-media-controls-panel {
     width: 95vw; 
     max-width: 40rem; 
     min-width: 20rem; 
-    padding: 1rem 1rem 5rem 1rem;
     height: 32vh;
     display: flex;
     align-items: center;
@@ -98,6 +97,14 @@ audio::-webkit-media-controls-panel {
     position: fixed;
     bottom: 0;
     gap: 5.9rem;
+    padding-bottom: calc(env(safe-area-inset-bottom, 0px) + 1rem);
+}
+
+.titles {
+    max-height: 12vh;
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-end;
 }
 
 
