--- a/style.css
+++ b/style.css
@@ -31,6 +31,14 @@ body {
    
 }
 
+.page-container {
+    position: relative;
+    width: 100vw;
+    height: 100vh;
+    overflow: hidden;
+}
+
+
 #background{
     position: fixed; /* Fixe l'image en arrière-plan */
     top: 0;
@@ -38,7 +46,7 @@ body {
     transform: translateX(-50%); /* Centre l'image en largeur */
     
     width: auto;
-    height: 66vh; /* Même taille qu'avant */
+    height: 67vh; /* Même taille qu'avant */
     
     object-fit: contain; /* Évite la déformation */
     z-index: -2; /* Place l'image derrière tout */
@@ -94,10 +102,10 @@ audio::-webkit-media-controls-panel {
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
-    position: fixed;
+    position: absolute;
     bottom: 0;
     gap: 5.9rem;
-    padding-bottom: calc(env(safe-area-inset-bottom, 0px) + 1rem);
+    padding: 1rem 1rem calc(env(safe-area-inset-bottom, 0px) + 2rem);
 }
 
 .titles {
