--- a/style.css
+++ b/style.css
@@ -38,12 +38,12 @@ body {
     transform: translateX(-50%); /* Centre l'image en largeur */
     
     width: auto;
-    height: 67vh; /* Même taille qu'avant */
+    height: 65vh; /* Même taille qu'avant */
     
     object-fit: contain; /* Évite la déformation */
     z-index: -2; /* Place l'image derrière tout */
-    mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1) 75%, rgba(0, 0, 0, 0) 100%);
-    -webkit-mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1) 75%, rgba(0, 0, 0, 0) 100%);
+    mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1) 70%, rgba(0, 0, 0, 0) 100%);
+    -webkit-mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1) 70%, rgba(0, 0, 0, 0) 100%);
     
 }
 
@@ -89,8 +89,8 @@ audio::-webkit-media-controls-panel {
     width: 95vw; 
     max-width: 40rem; 
     min-width: 20rem; 
-    padding: 1rem 1rem 5rem 1rem;
-    height: 32vh;
+    padding: 1rem 1rem 1rem 1rem;
+    height: 30rem;
     display: flex;
     align-items: center;
     justify-content: center;
