--- a/style.css
+++ b/style.css
@@ -90,14 +90,14 @@ audio::-webkit-media-controls-panel {
     max-width: 40rem; 
     min-width: 20rem; 
     padding: 1rem 1rem 1rem 1rem;
-    height: 30rem;
+    height: auto;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-wrap: wrap;
     position: fixed;
     bottom: 0;
-    gap: 5.9rem;
+    gap: 6rem;
 }
 
 
