font size ajusted

--- a/style.css
+++ b/style.css
@@ -48,14 +48,16 @@ body {
 /* Style du titre */
 h1 {
     font-family: '29LT Riwaya', serif;
-    font-size: 3.1rem;
+    font-size: max(7.5vw, 20px);
+    white-space: nowrap;
     font-weight: 800;
     margin-bottom: 1px;
     margin-top: 1px;
 }
 
 h3 {
-    font-size: 1.7rem;
+    font-size: max(3.9vw, 10px);
+    white-space: nowrap;
     margin-bottom: 3px;
     margin-top: 3px;
     font-weight: lighter;
@@ -64,15 +66,17 @@ h3 {
 
 .audio-container{
     width: 95vw; 
-    height: 34.5vh;
+    height: 33vh;
     max-width: 40rem; 
-    min-width: 20rem; 
+    min-width: 25rem; 
+
     padding: 0rem 1rem 1rem  1rem ;
     margin: 0rem 1.5rem 2rem  1.5rem ;
+
     display: flex;
-    align-items: center;
     justify-content: center;
     flex-wrap: wrap;
+
     position: fixed;
     bottom: 0;
     gap: 6rem;
@@ -80,25 +84,31 @@ h3 {
 
 
 /* 🖥️ Pour les écrans moyens (tablettes, iPads) */
-@media screen and (min-width: 768px) {
-    .audio-container {
-        width: 45vw; /* 25% de la largeur de l'écran */
-        height: 35vh; /* 35% de la hauteur de l'écran */
+@media screen and (min-width: 400px) {
+    /*.audio-container {
+        width: 45vw; 
+        height: 35vh; 
 
+    } */
+    h1{
+        font-size: 3.7vh;
+    }
+    h3{
+        font-size: 1.7vh;
     }
 }
 
-/* 🖥️ Pour les grands écrans (PC) */
-@media screen and (min-width: 1024px) {
-    .audio-container {
-        width: 90vw; /* Un peu plus grand sur PC */
-        height: 40vh; /* Plus haut aussi */
+@media screen and (max-height: 450px) {
+    h1{
+        font-size: 4vh;
+    }
+    h3{
+        font-size: 2vh;
     }
 }
-
 
 .audio-player{
-    width: 35rem;
+    width: 99%;
     display: flex;
     flex-direction: column; 
     align-items: center;   
