--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: center; 
+
 }
 
 
@@ -56,7 +57,7 @@ h1 {
 }
 
 h3 {
-    font-size: max(3.9vw, 10px);
+    font-size: max(4.4vw, 12px);
     white-space: nowrap;
     margin-bottom: 3px;
     margin-top: 3px;
@@ -75,6 +76,7 @@ h3 {
 
     display: flex;
     justify-content: center;
+    align-items: center;
     flex-wrap: wrap;
 
     position: fixed;
@@ -85,16 +87,14 @@ h3 {
 
 /* 🖥️ Pour les écrans moyens (tablettes, iPads) */
 @media screen and (min-width: 400px) {
-    /*.audio-container {
-        width: 45vw; 
-        height: 35vh; 
-
-    } */
     h1{
-        font-size: 3.7vh;
+        font-size: 4vh;
     }
     h3{
-        font-size: 1.7vh;
+        font-size: 2vh;
+    }
+    .audio-container{
+        max-width: 50rem;
     }
 }
 
@@ -105,10 +105,14 @@ h3 {
     h3{
         font-size: 2vh;
     }
+    .audio-container{
+        max-width: 50rem;
+    }
 }
 
 .audio-player{
     width: 99%;
+    min-width: 30rem; 
     display: flex;
     flex-direction: column; 
     align-items: center;   
@@ -164,13 +168,41 @@ h3 {
     margin-top: 5px;
 }
 
+/* Bulle de vitesse */
+.speed-control {
+    position: relative;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+#speedDisplay {
+    display: none; /* cachée par défaut */
+    position: absolute;
+    bottom: 1px;
+    right: -7px;
+    background-color: #F57961;
+    color: white;
+    font-size: 0.8rem;
+    padding: 1px 4px;
+    border-radius: 999px;
+    pointer-events: none;
+    z-index: 1;
+}
+
+
 /* LOCK SCREEN */
 
 
-@media only screen and (orientation: landscape) { 
-    html { 
-      width: 35%;
-      margin: 0 auto;
-      overflow: scroll;
+@media only screen and (orientation: landscape) {  
+    .audio-container{ 
+      max-width: 45rem;
+      width: min-content;
+      
+      overflow-y: scroll;  
+    }
+    .audio-container::-webkit-scrollbar {
+        width: 0;  
+        background: transparent;  
     }
   }
