--- a/style.css
+++ b/style.css
@@ -19,7 +19,7 @@
 body {
     font-family: Arial, sans-serif;
     text-align: center;
-    background-color: #000; /* Fond noir */
+    background-color: #3D0C10; /* Fond */
     color: #fff; /* Texte blanc pour le contraste */
 
     display: flex;
@@ -36,13 +36,17 @@ body {
     transform: translateX(-50%);
 
     width: auto;
-    height: 67.5vh;
+    height: 75vh;
 
     object-fit: contain;
     z-index: -2;
 
     mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1) 70%, rgba(0, 0, 0, 0) 100%);
     -webkit-mask-image: linear-gradient(to bottom, rgba(0, 0, 0, 1) 70%, rgba(0, 0, 0, 0) 100%);
+}
+
+#logo{
+    margin-top: 13rem;
 }
 
 
@@ -88,24 +92,18 @@ h3 {
 
 
 /* 🖥️ Pour les écrans moyens (tablettes, iPads) */
-@media screen and (min-width: 400px) {
-    h1{
-        font-size: 4vh;
-    }
-    h3{
-        font-size: 2vh;
-    }
+@media screen and (min-width: 750px) {
     .audio-container{
         max-width: 50rem;
     }
 }
 
-@media screen and (max-height: 450px) {
+@media screen and (min-width: 1023px) {
     h1{
-        font-size: 4vh;
+        font-size: 4rem;
     }
     h3{
-        font-size: 2vh;
+        font-size: 2rem;
     }
     .audio-container{
         max-width: 50rem;
@@ -199,7 +197,6 @@ h3 {
 @media only screen and (orientation: landscape) {  
     .audio-container{ 
       max-width: 45rem;
-      width: min-content;
       overflow-y: scroll;  
     }
     .audio-container::-webkit-scrollbar {
